deployment/inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
spec:
  selector:
    matchLabels:
      app: inventory
  replicas: 1
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: container
          image: quay.io/ske/inventory:latest
          ports:
            - containerPort: 8080
              protocol: TCP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
spec:
  selector:
    app: inventory
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: inventory
spec:
  to:
    kind: Service
    name: inventory
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: ''
    destinationCACertificate: ''
  port:
    targetPort: 8080
  alternateBackends: []
