deployment/store-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tracing-demo
  name: store-app
spec:
  selector:
    matchLabels:
      app: store-app
  replicas: 1
  template:
    metadata:
      labels:
        app: store-app
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: web-config
            defaultMode: 420
      containers:
        - name: container
          image: quay.io/ske/store-app:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /opt/app-root/src/assets/config.json
              subPath: config.json
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
---
apiVersion: v1
kind: Service
metadata:
  name: store-app
spec:
  selector:
    app: store-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: store-app
spec:
  to:
    kind: Service
    name: store-app
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: ''
    destinationCACertificate: ''
  port:
    targetPort: 8080
  alternateBackends: []
